--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "history": "^4.6.1",
+    "mongodb": "^2.2.28",
+    "mongoose": "^4.10.5",
+    "morgan": "^1.8.2",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
@@ -35,6 +39,7 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.28.0",
     "jest": "20.0.3",
+    "nodemon": "^1.11.0",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.5",
@@ -50,7 +55,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon index.js",
     "start:dev": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
