--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-preset-stage-1": "^6.1.18",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
@@ -16,15 +17,16 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
-    "react": "^15.5.4",
+    "react": "^0.14.3",
     "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.5.4",
+    "react-dom": "^0.14.3",
     "react-fontawesome": "^1.6.1",
     "react-redux": "4.3.0",
     "react-router": "^2.0.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.0.4",
-    "redux-form": "^6.7.0"
+    "redux-form": "^5.0.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.1.18",
