--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-preset-stage-1": "^6.1.18",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
+    "cors": "^2.8.3",
     "express": "^4.15.3",
     "history": "^4.6.1",
     "jwt-simple": "^0.5.1",
@@ -17,6 +18,7 @@
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
+    "prop-types": "^15.5.10",
     "react": "^0.14.3",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^0.14.3",
