--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.3",
     "express": "^4.15.3",
     "history": "^4.6.1",
+    "jwt-decode": "^2.2.0",
     "jwt-simple": "^0.5.1",
     "lodash": "^3.10.1",
     "mongodb": "^2.2.28",
