--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^2.2.28",
     "mongoose": "^4.10.5",
     "morgan": "^1.8.2",
+    "object-values-to-array": "^1.0.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
     "passport-local": "^1.0.0",
